# gn_build_common

./: PRESUBMIT.py  README.md  build-ctags.sh  build_config.h  buildflag_header.gni  common.croc  compiled_action.gni  dotfile_settings.gni  gn_helpers_unittest.py  gypi_to_gn.py  nocompile.gni  symlink.gni  write_build_date_header.py
android/: BUILD.gn  apk_operations.py  resource_sizes.py
android/binary_size/apks/: README.md
android/buildhooks/: BUILD.gn
android/bytecode/: BUILD.gn
android/bytecode/java/org/chromium/bytecode/: ByteCodeProcessor.java
android/docs/: lint.md
android/gradle/: android.jinja  generate_gradle.py  gn_to_cmake.py  java.jinja  root.jinja
android/gyp/: aar.py  create_tool_wrapper.py  javac.py
android/gyp/test/: BUILD.gn
android/gyp/util/: build_utils.py
android/incremental_install/: BUILD.gn  README.md
android/pylib/device/commands/: BUILD.gn
android/stacktrace/: BUILD.gn
args/: README.txt  fuchsia.gn  headless.gn
config/: BUILD.gn  BUILDCONFIG.gn  allocator.gni  arm.gni  dcheck_always_on.gni  features.gni  host_byteorder.gni  jumbo.gni  mips.gni  pch.gni  sysroot.gni  ui.gni  v8_target_cpu.gni  zip.gni
config/aix/: BUILD.gn
config/android/: BUILD.gn  abi.gni  config.gni  internal_rules.gni  rules.gni
config/c++/: c++.gni
config/chromecast/: BUILD.gn
config/clang/: clang.gni
config/compiler/: BUILD.gn  compiler.gni
config/compiler/pgo/: BUILD.gn
config/coverage/: BUILD.gn  coverage.gni
config/freetype/: BUILD.gn
config/fuchsia/: BUILD.gn  package.gni  rules.gni
config/gcc/: BUILD.gn
config/ios/: BUILD.gn  OWNERS  asset_catalog.gni  ios_sdk.gni  rules.gni
config/linux/: BUILD.gn  pkg_config.gni
config/linux/atk/: BUILD.gn
config/linux/dbus/: BUILD.gn
config/linux/dri/: BUILD.gn
config/linux/gtk/: BUILD.gn  gtk.gni
config/linux/gtk2/: BUILD.gn
config/linux/gtk3/: BUILD.gn
config/linux/libffi/: BUILD.gn
config/linux/pangocairo/: BUILD.gn  pangocairo.gni
config/mac/: BUILD.gn  base_rules.gni  mac_sdk.gni  rules.gni  symbols.gni
config/nacl/: BUILD.gn  config.gni  rules.gni
config/posix/: BUILD.gn
config/sanitizers/: BUILD.gn  sanitizers.gni
config/win/: BUILD.gn  console_app.gni  manifest.gni
linux/: BUILD.gn
linux/unbundle/: ffmpeg.gn  flac.gn  icu.gn  libdrm.gn  libevent.gn  libjpeg.gn  libpng.gn  libvpx.gn  libxml.gn  libxslt.gn  openh264.gn  opus.gn  re2.gn  snappy.gn  zlib.gn
mac/: tweak_info_plist.gni
sanitizers/: sanitizer_options.cc
secondary/testing/gtest/: BUILD.gn
toolchain/: BUILD.gn  cc_wrapper.gni  concurrent_links.gni  cros_toolchain.gni  gcc_toolchain.gni  nacl_toolchain.gni  toolchain.gni
toolchain/aix/: BUILD.gn
toolchain/android/: BUILD.gn
toolchain/cros/: BUILD.gn
toolchain/fuchsia/: BUILD.gn
toolchain/linux/: BUILD.gn
toolchain/linux/unbundle/: BUILD.gn  README.md
toolchain/mac/: BUILD.gn
toolchain/nacl/: BUILD.gn
toolchain/win/: BUILD.gn  midl.gni
util/: java_action.gni  process_version.gni
win/: BUILD.gn  message_compiler.gni
win/syzygy/: syzygy.gni
