# Copyright (c) 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# This file contains variables that can be imported into a repo's dotfile (.gn)
# to make it easier to roll new versions of //build/common in.

build_dotfile_settings = {
  exec_script_whitelist = [
    "//build/common/config/android/config.gni",
    "//build/common/config/android/internal_rules.gni",
    "//build/common/config/android/rules.gni",
    "//build/common/config/compiler/BUILD.gn",
    "//build/common/config/gcc/gcc_version.gni",
    "//build/common/config/host_byteorder.gni",
    "//build/common/config/ios/ios_sdk.gni",
    "//build/common/config/linux/BUILD.gn",
    "//build/common/config/linux/pkg_config.gni",
    "//build/common/config/linux/atk/BUILD.gn",
    "//build/common/config/linux/dri/BUILD.gn",
    "//build/common/config/mac/mac_sdk.gni",
    "//build/common/config/mac/rules.gni",
    "//build/common/config/posix/BUILD.gn",
    "//build/common/config/sysroot.gni",
    "//build/common/config/win/BUILD.gn",
    "//build/common/config/win/visual_studio_version.gni",
    "//build/common/toolchain/BUILD.gn",
    "//build/common/toolchain/concurrent_links.gni",
    "//build/common/toolchain/mac/BUILD.gn",
    "//build/common/toolchain/toolchain.gni",
    "//build/common/toolchain/win/BUILD.gn",
    "//build/common/util/branding.gni",
    "//build/common/util/version.gni",
  ]
}
